[package]
name = "pyoxy"
version = "0.3.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "Self-contained Python distribution and application runner."
readme = "README.md"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
keywords = ["python"]
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dependencies.pyembed]
version = "0.24.0-pre"
path = "../pyembed"
default-features = false
features = ["serialization", "zipimport"]

[dev-dependencies]
assert_cmd = "2.0"
glob = "0.3"
libtest-mimic = "0.6"
predicates = "2.0"
tempfile = "3.2"

[[test]]
name = "python"
harness = false

[[test]]
name = "yaml"
harness = false
