[package]
name = "pyoxy"
version = "0.3.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "Self-contained Python distribution and application runner."
readme = "README.md"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
keywords = ["python"]
edition = "2021"
build = "build.rs"

[package.metadata.release]
# PyOxy is only published as a binary, not to crates.io.
release = false

[dependencies]
anyhow = "1.0.68"
clap = "4.5.20"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"

[dependencies.pyembed]
version = "0.25.0-pre"
path = "../pyembed"
default-features = false
features = ["serialization", "zipimport"]

[dev-dependencies]
assert_cmd = "2.0.8"
glob = "0.3.1"
libtest-mimic = "0.6.0"
predicates = "2.1.5"
tempfile = "3.3.0"

[[test]]
name = "python"
harness = false

[[test]]
name = "yaml"
harness = false
