[package]
name = "pyrepackager"
version = "0.0.1"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.2"
hex = "0.3"
itertools = "0.8"
libc = "0.2"
python3-sys = { path = "../third_party/rust-cpython/python3-sys" }
regex = "1"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.8"
tar = "0.4"
toml = "0.4"
url = "1.7"
walkdir = "2"
zstd = "0.4"

[dependencies.cpython]
path = "../third_party/rust-cpython"
features = ["no-auto-initialize", "python-3-7"]
