[package]
name = "python-oxidized-importer"
version = "0.9.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "Python-2.0 OR MPL-2.0"
description = "A Rust-powered Python importer"
readme = "README.md"

[lib]
name = "oxidized_importer"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0"
memmap2 = "0.5"
once_cell = "1.7"
simple-file-manifest = "0.11"

[dependencies.python-packed-resources]
version = "0.12.0-pre"
path = "../python-packed-resources"

[dependencies.python-packaging]
version = "0.16.0-pre"
path = "../python-packaging"
default-features = false

[dependencies.pyo3]
version = "0.17.1"
features = ["macros"]

[dependencies.zip]
version = "0.6"
optional = true
default-features = false
features = ["deflate"]

[target.'cfg(windows)'.dependencies]
memory-module-sys = "0.3"
winapi = { version = "0.3", features = ["libloaderapi", "memoryapi", "minwindef"] }

[features]
default = ["zipimport"]

# Build the crate in Python extension module mode. This will make linking
# correct so the resulting library can be loaded as a Python extension
# module.
extension-module = ["pyo3/extension-module"]

# Enable support for importing from zip files.
zipimport = ["zip"]
