[package]
name = "python-packaging-net"
version = "0.9.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Software licensing functionality requiring network access"
keywords = ["tugger"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
spdx = "0.8"
url = "2.2"

[dependencies.python-packaging]
version = "0.13.0-pre"
path = "../python-packaging"

[dev-dependencies.tugger-common]
version = "0.9.0-pre"
path = "../tugger-common"
