[package]
name = "python-packaging"
version = "0.13.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Python packaging primitives implemented in Rust"
readme = "README.md"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
keywords = ["python"]

[dependencies]
anyhow = "1.0"
base64 = { version = "0.13", optional = true }
byteorder = "1.4"
encoding_rs = "0.8"
itertools = "0.10"
mailparse = "0.13"
once_cell = "1.7"
regex = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = { version = "0.10", optional = true }
spdx = "0.8"
time = { version = "0.3", optional = true }
walkdir = "2"

[dependencies.python-packed-resources]
version = "0.9.0-pre"
path = "../python-packed-resources"

[dependencies.tugger-file-manifest]
version = "0.8.0-pre"
path = "../tugger-file-manifest"

[dependencies.zip]
version = "0.6"
optional = true
default-features = false
features = ["deflate"]

[dev-dependencies]
tempfile = "3.2"

# We make `wheel` support optional because it has dependencies that we don't
# want to bloat the dependency tree with.
[features]
default = ["wheel"]
serialization = ["serde"]
wheel = ["base64", "sha2", "time", "zip"]
