[package]
name = "python-packed-resources"
version = "0.12.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Manage data structures containing Python resources"
readme = "README.md"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
keywords = ["python"]

[dependencies]
anyhow = "1.0"
byteorder = "1"
