[package]
name = "release"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
description = "Performs a release of PyOxidizer"
license = "MPL-2.0"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"

[package.metadata.release]
# Internal package is never released.
release = false

[dependencies]
anyhow = "1.0.68"
cargo-lock = "8.0.3"
cargo_toml = "0.14.0"
clap = "4.0.32"
duct = "0.13.6"
# We don't need network functionality.
git2 = { version = "0.16.1", default-features = false }
once_cell = "1.17.0"
pulldown-cmark = "0.9.2"
rustdoc-types = "0.20.0"
semver = "1.0.16"
serde_json = "1.0.91"
tempfile = "3.3.0"
toml = "0.5.11"
url = "2.3.1"
