[package]
name = "rpm-repository"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "RPM repository interaction"
keywords = ["createrepo", "rpm", "packaging", "repomd", "yum"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
digest = "0.10"
futures = "0.3"
hex = "0.4"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
sha-1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.15", features = ["macros"] }
url = "2.2"

[dependencies.async-compression]
version = "0.3"
features = ["futures-io", "gzip", "xz", "zstd"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]
