[package]
name = "starlark-dialect-build-targets"
version = "0.8.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
description = "A Starlark dialect providing simple build system primitives"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
edition = "2021"

[dependencies]
anyhow = "1.0"
codemap = "0.1"
codemap-diagnostic = "0.1"
linked-hash-map = "0.5"
log = "0.4"
path-dedot = "3.0"
starlark = "0.3.1"
