[package]
name = "text-stub-library"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Interface to text stub files (.tbd files)"
keywords = ["apple", "macos", "tbd"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4"
serde_yaml = "0.8"

[dev-dependencies]
rand = "0.8"
rayon = "1.5"
walkdir = "2.3"

[dev-dependencies.tugger-apple]
version = "0.1.0-pre"
path = "../tugger-apple"
