[package]
name = "tugger-apple-bundle"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Interfact with Apple bundle primitives"
keywords = ["tugger", "apple", "macos", "bundle", "appbundle"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
