[package]
name = "tugger-apple-codesign"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Pure Rust interface to code signing on Apple platforms"
keywords = ["tugger", "apple", "macos", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[[bin]]
name = "rcodesign"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
bcder = "0.6"
bytes = "1.0"
clap = "2.33"
chrono = "0.4"
goblin = "0.3"
hex = "0.4"
pem = "0.8"
plist = "1.1"
reqwest = { version = "0.11", default-features = false }
scroll = "0.10"
ring = "0.16"

[dependencies.cryptographic-message-syntax]
path = "../cryptographic-message-syntax"
version = "0.1.0-dev"
