[package]
name = "tugger-apple-codesign"
version = "0.2.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Pure Rust interface to code signing on Apple platforms"
keywords = ["tugger", "apple", "macos", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[[bin]]
name = "rcodesign"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bcder = "0.6"
bitflags = "1.2"
bytes = "1.0"
clap = "2.33"
chrono = "0.4"
goblin = "0.4"
hex = "0.4"
pem = "0.8"
plist = "1.1"
regex = "1.4"
reqwest = { version = "0.11", default-features = false }
ring = "0.16"
scroll = "0.10"
slog = "2.7"
slog-term = "2.8"
thiserror = "1.0"

[dependencies.cryptographic-message-syntax]
path = "../cryptographic-message-syntax"
version = "0.2.0-pre"

[dependencies.tugger-apple-bundle]
path = "../tugger-apple-bundle"
version = "0.3.0-pre"
