[package]
name = "tugger-apple-codesign"
version = "0.8.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Pure Rust interface to code signing on Apple platforms"
keywords = ["tugger", "apple", "macos", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[[bin]]
name = "rcodesign"
path = "src/main.rs"
