[package]
name = "tugger-apple"
version = "0.8.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Random functionality related to Apple platforms"
keywords = ["tugger", "apple", "macos"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0"
goblin = "0.5"
scroll = "0.11"
thiserror = "1.0"
