[package]
name = "tugger-apple"
version = "0.8.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Random functionality related to Apple platforms"
keywords = ["tugger", "apple", "macos"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.92"
goblin = "0.6.1"
scroll = "0.11.0"
thiserror = "1.0.67"
